tests/baselines/reference/ExportAssignment7.errors.txt
==== tests/cases/compiler/ExportAssignment7.ts (3 errors) ====
    export class C {
                 ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }
    
    export = B;
    ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'B'.
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.